# sansreplace

./: ,random-choose.md  .gitignore  README.md  algorithms.md  cardchoose.md  cardchoose.py  choose.py  fisheryates.py  floydf2.py  index.md  iterativechoose.py  rejectionsample.py  results.md  running.md  selby_fy.py  selbychoose.py  test_choose  time_choose
cpp/: cardchoose.c  cardchoose.cpp  donothing.c  donothing.cpp  fisheryates.cpp  floydf2.cpp  hsel.cpp  iterativechoose.cpp  main.cpp  meson.build  quadraticf2.cpp  quadraticreject.cpp  randbelow.c  randbelow.h  rejectionsample.cpp  reservoirsample.cpp  selby_fy.cpp  select.cpp  testfunc.h  timing.cpp  timing.h  try_cffi
cpp/results/: random-output.txt  sorted-output.txt
latex/: .gitignore  bib.bib  cardchoose.tex  choose_multiset.py  do_build  random_1346269.pgf  random_701408733.pgf  random_table.tex  sorted_701408733.pgf  sorted_table.tex  test_choose
latex/code/: cardchoose.py  choose_binom.py  choose_multiset.py  choose_multiset_recursive.py  fisheryates.py  floydf2.py  iterativechoose.py  quadraticf2.py  quadraticreject.py  rejectionsample.py  reservoirsample.py  selby_fy.py
latex/python/: fetchhash.py
python/: all_least_sq  compare  floydf2.py  gitstate.py  impl_load.py  least_sq  load_cpp.py  load_python.py  lstsq.py  make_plots  nkvalues.py  pclasses.py  plot  plot_all  plot_anim.py  read_results.py  scatter  test_choose  time_choose  time_cpp
python/algorithms/: cardchoose.py  donothing.py  hsel.py  iterativechoose.py  quadraticf2.py  quadraticreject.py  reservoirsample.py
results/2018-10-20-cpp-random/: csv.csv
results/2018-10-23/cpp/random/: csv.csv
results/2018-10-23/cpp/sorted/: csv.csv
results/2022-12-22/: random.csv  sorted.csv
results/2022-12-24/: random.csv  sorted.csv
results/2022-12-25/: random.csv  sorted.csv
results/latest/: random.csv  sorted.csv
rust/: Cargo.toml
rust/src/: main.rs
rust/src/algorithms/: cardchoose.rs  floyd_f2.rs  mod.rs  quadratic_f2.rs  quadratic_reject.rs  reject.rs
