[package]
name = "sansreplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
anyhow = "1.0.68"

[dependencies.clap]
version = "4.0.32"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]
